minor corrections to the probabilities

--- a/Week 1/Damilola_week1.ipynb
+++ b/Week 1/Damilola_week1.ipynb
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "inside-being",
+   "id": "removable-tournament",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "hybrid-saturn",
    "metadata": {},
    "outputs": [
@@ -986,15 +986,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability of randomly selecting a Female who enrolled is 0.039\n"
+      "Probability of randomly selecting a Female who enrolled is 0.199\n"
      ]
     }
    ],
    "source": [
     "num_female_enrolled = len(data[(data['GENDER']=='Female') & (data['status'] == 'Enrolled')])\n",
-    "total_number_enrolled = len(data)\n",
+    "total_number_female = len(data[(data['GENDER']=='Female')])\n",
     "\n",
-    "print('Probability of randomly selecting a Female who enrolled is {}'.format(round(num_female_enrolled/total_number_enrolled,3)))"
+    "print('Probability of randomly selecting a Female who enrolled is {}'.format(round(num_female_enrolled/total_number_female,3)))"
    ]
   },
   {
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "expected-insertion",
    "metadata": {},
    "outputs": [
@@ -1015,21 +1015,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability of randomly selecting a Male who enrolled is 0.442\n"
+      "Probability of randomly selecting a Male who enrolled is 0.548\n"
      ]
     }
    ],
    "source": [
     "num_male_enrolled = len(data[(data['GENDER']=='Male') & (data['status'] == 'Enrolled')])\n",
-    "total_number_enrolled = len(data)\n",
+    "total_number_male = len(data[(data['GENDER']=='Male')])\n",
     "\n",
-    "print('Probability of randomly selecting a Male who enrolled is {}'.format(round(num_male_enrolled/total_number_enrolled,3)))"
+    "print('Probability of randomly selecting a Male who enrolled is {}'.format(round(num_male_enrolled/total_number_male,3)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "sunset-cloud",
+   "id": "cubic-frame",
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tight-crash",
+   "id": "planned-retail",
    "metadata": {},
    "source": [
     "### Conclusion"
@@ -1120,25 +1120,439 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "restricted-juvenile",
+   "execution_count": 33,
+   "id": "dangerous-wedding",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. Probability of randomly selecting a Female who enrolled is 0.04\n",
-      "2. Probability of randomly selecting a Male who enrolled is 0.44\n",
-      "3. Probability of randomly selecting a person who enrolled is 0.48\n"
+      "1. Probability of randomly selecting a Female who enrolled is 0.199\n",
+      "2. Probability of randomly selecting a Male who enrolled is 0.548\n",
+      "3. Probability of randomly selecting a person who enrolled is 0.597\n"
      ]
     }
    ],
    "source": [
-    "print('1. Probability of randomly selecting a Female who enrolled is {}'.format(round(num_female_enrolled/total_number_enrolled,2)))\n",
-    "print('2. Probability of randomly selecting a Male who enrolled is {}'.format(round(num_male_enrolled/total_number_enrolled,2)))\n",
-    "print('3. Probability of randomly selecting a person who enrolled is {}'.format(round(num_enrolled/total_number_enrolled,2)))"
+    "print('1. Probability of randomly selecting a Female who enrolled is {}'.format(round(num_female_enrolled/total_number_female,3)))\n",
+    "print('2. Probability of randomly selecting a Male who enrolled is {}'.format(round(num_male_enrolled/total_number_male,3)))\n",
+    "print('3. Probability of randomly selecting a person who enrolled is {}'.format(round(num_enrolled/total_number_enrolled,3)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "sophisticated-geology",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>FIRST NAME</th>\n",
+       "      <th>LAST NAME</th>\n",
+       "      <th>SOURCE</th>\n",
+       "      <th>COURSE</th>\n",
+       "      <th>TRACK</th>\n",
+       "      <th>GENDER</th>\n",
+       "      <th>status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Candice</td>\n",
+       "      <td>Koetter</td>\n",
+       "      <td>WEBSITE</td>\n",
+       "      <td>PythonForDataScience</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Not_Enrolled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Marjory</td>\n",
+       "      <td>Knobbe</td>\n",
+       "      <td>WEBSITE</td>\n",
+       "      <td>ProductDesign</td>\n",
+       "      <td>Weekend</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Not_Enrolled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Mirella</td>\n",
+       "      <td>Rogers</td>\n",
+       "      <td>WEBSITE</td>\n",
+       "      <td>FullStack</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Enrolled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>23</td>\n",
+       "      <td>Marjorie</td>\n",
+       "      <td>Wells</td>\n",
+       "      <td>WEBSITE</td>\n",
+       "      <td>FullStack</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Not_Enrolled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>27</td>\n",
+       "      <td>Doris</td>\n",
+       "      <td>Dyer</td>\n",
+       "      <td>Mr Simps</td>\n",
+       "      <td>ProductDesign</td>\n",
+       "      <td>ONLINE</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Not_Enrolled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3671</th>\n",
+       "      <td>3674</td>\n",
+       "      <td>Casey</td>\n",
+       "      <td>Tiner</td>\n",
+       "      <td>WEBSITE</td>\n",
+       "      <td>Frontend</td>\n",
+       "      <td>Weekend</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Not_Enrolled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3672</th>\n",
+       "      <td>3675</td>\n",
+       "      <td>Carrie</td>\n",
+       "      <td>Garay</td>\n",
+       "      <td>WEBSITE</td>\n",
+       "      <td>ProductDesign</td>\n",
+       "      <td>ONLINE</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Not_Enrolled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3673</th>\n",
+       "      <td>3676</td>\n",
+       "      <td>Shery</td>\n",
+       "      <td>Larose</td>\n",
+       "      <td>Social Media</td>\n",
+       "      <td>ProductDesign</td>\n",
+       "      <td>ONLINE</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Enrolled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3674</th>\n",
+       "      <td>3677</td>\n",
+       "      <td>Darlene</td>\n",
+       "      <td>Mcnab</td>\n",
+       "      <td>Mr Simps</td>\n",
+       "      <td>FullStack</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Not_Enrolled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3675</th>\n",
+       "      <td>3678</td>\n",
+       "      <td>Carmon</td>\n",
+       "      <td>Johnson</td>\n",
+       "      <td>Social Media</td>\n",
+       "      <td>PythonForDataScience</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Not_Enrolled</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>717 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0 FIRST NAME LAST NAME        SOURCE                COURSE  \\\n",
+       "4              5    Candice   Koetter       WEBSITE  PythonForDataScience   \n",
+       "6              7    Marjory    Knobbe       WEBSITE         ProductDesign   \n",
+       "13            14    Mirella    Rogers       WEBSITE             FullStack   \n",
+       "21            23   Marjorie     Wells       WEBSITE             FullStack   \n",
+       "25            27      Doris      Dyer      Mr Simps         ProductDesign   \n",
+       "...          ...        ...       ...           ...                   ...   \n",
+       "3671        3674      Casey     Tiner       WEBSITE              Frontend   \n",
+       "3672        3675     Carrie     Garay       WEBSITE         ProductDesign   \n",
+       "3673        3676      Shery    Larose  Social Media         ProductDesign   \n",
+       "3674        3677    Darlene     Mcnab      Mr Simps             FullStack   \n",
+       "3675        3678     Carmon   Johnson  Social Media  PythonForDataScience   \n",
+       "\n",
+       "        TRACK  GENDER        status  \n",
+       "4     Weekday  Female  Not_Enrolled  \n",
+       "6     Weekend  Female  Not_Enrolled  \n",
+       "13    Weekday  Female      Enrolled  \n",
+       "21    Weekday  Female  Not_Enrolled  \n",
+       "25     ONLINE  Female  Not_Enrolled  \n",
+       "...       ...     ...           ...  \n",
+       "3671  Weekend  Female  Not_Enrolled  \n",
+       "3672   ONLINE  Female  Not_Enrolled  \n",
+       "3673   ONLINE  Female      Enrolled  \n",
+       "3674  Weekday  Female  Not_Enrolled  \n",
+       "3675  Weekday  Female  Not_Enrolled  \n",
+       "\n",
+       "[717 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[(data['GENDER']=='Female')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "prescribed-ribbon",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>FIRST NAME</th>\n",
+       "      <th>LAST NAME</th>\n",
+       "      <th>SOURCE</th>\n",
+       "      <th>COURSE</th>\n",
+       "      <th>TRACK</th>\n",
+       "      <th>GENDER</th>\n",
+       "      <th>status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Rodney</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>WEBSITE</td>\n",
+       "      <td>FullStack</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Not_Enrolled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>James</td>\n",
+       "      <td>Stanger</td>\n",
+       "      <td>WEBSITE</td>\n",
+       "      <td>FullStack</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Enrolled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Gilbert</td>\n",
+       "      <td>Vance</td>\n",
+       "      <td>WEBSITE</td>\n",
+       "      <td>FullStack</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Not_Enrolled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Brett</td>\n",
+       "      <td>Schmidt</td>\n",
+       "      <td>WEBSITE</td>\n",
+       "      <td>FullStack</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Enrolled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>George</td>\n",
+       "      <td>Evans</td>\n",
+       "      <td>WEBSITE</td>\n",
+       "      <td>FullStack</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Enrolled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2969</th>\n",
+       "      <td>2972</td>\n",
+       "      <td>Christopher</td>\n",
+       "      <td>Gerlach</td>\n",
+       "      <td>Social Media</td>\n",
+       "      <td>Frontend</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Enrolled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2970</th>\n",
+       "      <td>2973</td>\n",
+       "      <td>Michael</td>\n",
+       "      <td>Stotts</td>\n",
+       "      <td>WEBSITE</td>\n",
+       "      <td>ProductDesign</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Not_Enrolled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2971</th>\n",
+       "      <td>2974</td>\n",
+       "      <td>Bob</td>\n",
+       "      <td>Sosa</td>\n",
+       "      <td>Social Media</td>\n",
+       "      <td>FigmaDesigntoWebflow</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Enrolled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2972</th>\n",
+       "      <td>2975</td>\n",
+       "      <td>David</td>\n",
+       "      <td>Artrip</td>\n",
+       "      <td>Social Media</td>\n",
+       "      <td>BackendWithPythonDjango</td>\n",
+       "      <td>Weekend</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Enrolled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2973</th>\n",
+       "      <td>2976</td>\n",
+       "      <td>Anthony</td>\n",
+       "      <td>Mildren</td>\n",
+       "      <td>Social Media</td>\n",
+       "      <td>ProductDesign</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Enrolled</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2959 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0   FIRST NAME LAST NAME        SOURCE  \\\n",
+       "0              1       Rodney       Doe       WEBSITE   \n",
+       "1              2        James   Stanger       WEBSITE   \n",
+       "2              3      Gilbert     Vance       WEBSITE   \n",
+       "3              4        Brett   Schmidt       WEBSITE   \n",
+       "5              6       George     Evans       WEBSITE   \n",
+       "...          ...          ...       ...           ...   \n",
+       "2969        2972  Christopher   Gerlach  Social Media   \n",
+       "2970        2973      Michael    Stotts       WEBSITE   \n",
+       "2971        2974          Bob      Sosa  Social Media   \n",
+       "2972        2975        David    Artrip  Social Media   \n",
+       "2973        2976      Anthony   Mildren  Social Media   \n",
+       "\n",
+       "                       COURSE    TRACK GENDER        status  \n",
+       "0                   FullStack  Weekday   Male  Not_Enrolled  \n",
+       "1                   FullStack  Weekday   Male      Enrolled  \n",
+       "2                   FullStack  Weekday   Male  Not_Enrolled  \n",
+       "3                   FullStack  Weekday   Male      Enrolled  \n",
+       "5                   FullStack  Weekday   Male      Enrolled  \n",
+       "...                       ...      ...    ...           ...  \n",
+       "2969                 Frontend  Weekday   Male      Enrolled  \n",
+       "2970            ProductDesign  Weekday   Male  Not_Enrolled  \n",
+       "2971     FigmaDesigntoWebflow  Weekday   Male      Enrolled  \n",
+       "2972  BackendWithPythonDjango  Weekend   Male      Enrolled  \n",
+       "2973            ProductDesign  Weekday   Male      Enrolled  \n",
+       "\n",
+       "[2959 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[(data['GENDER']=='Male')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "professional-consultancy",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
