started week 2 project

--- a/Week 1/Damilola_week1.ipynb
+++ b/Week 1/Damilola_week1.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "chubby-harassment",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Univelcity Virtual Intership -- Week 1"
    ]
@@ -11,7 +15,11 @@
   {
    "cell_type": "markdown",
    "id": "casual-finance",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "#### Instruction :There are two documents attached; one contains the list of people who registered for a program while the other contains the list of those that eventually got enrolled.\n",
     "\n",
@@ -26,7 +34,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "personalized-completion",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -45,7 +57,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "intensive-problem",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "enrolled = pd.read_csv('enrolled applicants.csv')\n",
@@ -55,7 +71,11 @@
   {
    "cell_type": "markdown",
    "id": "cardiovascular-concentration",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Data Wrangling\n",
     "#### Enrolled"
@@ -63,9 +83,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "better-liability",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -148,40 +172,119 @@
        "      <td>Weekend</td>\n",
        "      <td>Male</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1761</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Edward</td>\n",
+       "      <td>Johnston</td>\n",
+       "      <td>WEBSITE</td>\n",
+       "      <td>Backend With Python Django</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1762</th>\n",
+       "      <td>1295</td>\n",
+       "      <td>Brian</td>\n",
+       "      <td>Hargrove</td>\n",
+       "      <td>Social Media</td>\n",
+       "      <td>Full Stack</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1763</th>\n",
+       "      <td>2827</td>\n",
+       "      <td>Grady</td>\n",
+       "      <td>Sullens</td>\n",
+       "      <td>Social Media</td>\n",
+       "      <td>Frontend Web Development</td>\n",
+       "      <td>ONLINE</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1764</th>\n",
+       "      <td>1894</td>\n",
+       "      <td>Felipe</td>\n",
+       "      <td>Fassino</td>\n",
+       "      <td>Social Media</td>\n",
+       "      <td>Figma Design to Webflow</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1765</th>\n",
+       "      <td>1662</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Easley</td>\n",
+       "      <td>Social Media</td>\n",
+       "      <td>Python For DataScience</td>\n",
+       "      <td>ONLINE</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1766 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0 FIRST NAME LAST NAME        SOURCE                   COURSE  \\\n",
-       "0        1120     Robert    Mccain       WEBSITE               Full Stack   \n",
-       "1        2557     Russel    Reagin      Mr Simps               Full Stack   \n",
-       "2        1682      Barry   Dickson       WEBSITE               Full Stack   \n",
-       "3        1961      Allen  Williams      Mr Simps                      NaN   \n",
-       "4         295      Brian     Bryon  Social Media  Python For Data Science   \n",
+       "      Unnamed: 0 FIRST NAME LAST NAME        SOURCE  \\\n",
+       "0           1120     Robert    Mccain       WEBSITE   \n",
+       "1           2557     Russel    Reagin      Mr Simps   \n",
+       "2           1682      Barry   Dickson       WEBSITE   \n",
+       "3           1961      Allen  Williams      Mr Simps   \n",
+       "4            295      Brian     Bryon  Social Media   \n",
+       "...          ...        ...       ...           ...   \n",
+       "1761        2020     Edward  Johnston       WEBSITE   \n",
+       "1762        1295      Brian  Hargrove  Social Media   \n",
+       "1763        2827      Grady   Sullens  Social Media   \n",
+       "1764        1894     Felipe   Fassino  Social Media   \n",
+       "1765        1662       John    Easley  Social Media   \n",
        "\n",
-       "     TRACK GENDER  \n",
-       "0  Weekday   Male  \n",
-       "1  Weekday   Male  \n",
-       "2  Weekday   Male  \n",
-       "3  Weekday   Male  \n",
-       "4  Weekend   Male  "
+       "                          COURSE    TRACK GENDER  \n",
+       "0                     Full Stack  Weekday   Male  \n",
+       "1                     Full Stack  Weekday   Male  \n",
+       "2                     Full Stack  Weekday   Male  \n",
+       "3                            NaN  Weekday   Male  \n",
+       "4        Python For Data Science  Weekend   Male  \n",
+       "...                          ...      ...    ...  \n",
+       "1761  Backend With Python Django  Weekday   Male  \n",
+       "1762                  Full Stack  Weekday   Male  \n",
+       "1763    Frontend Web Development   ONLINE   Male  \n",
+       "1764     Figma Design to Webflow  Weekday   Male  \n",
+       "1765      Python For DataScience   ONLINE   Male  \n",
+       "\n",
+       "[1766 rows x 7 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "enrolled.head()"
+    "enrolled"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "id": "advisory-consequence",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -206,7 +309,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "billion-cursor",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -228,7 +335,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "greenhouse-dream",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -326,7 +437,11 @@
   {
    "cell_type": "markdown",
    "id": "demonstrated-lobby",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Registered"
    ]
@@ -335,7 +450,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "warming-catalog",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -451,7 +570,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "private-albert",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -480,7 +603,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "olympic-question",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "missing_features = [x for x in registered.columns if registered[x].isnull().mean()]\n",
@@ -493,7 +620,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "separate-sweden",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -514,7 +645,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "decreased-jones",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -536,7 +671,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "cloudy-present",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -643,7 +782,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "lonely-vehicle",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -768,7 +911,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "chinese-selling",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -897,7 +1044,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "municipal-benjamin",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -927,7 +1078,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "fresh-referral",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -947,7 +1102,7 @@
     "features.pop(-2)\n",
     "features\n",
     "\n",
-    "fig, axs = plt.subplots(nrows=2, ncols=2, figsize=(2,3))\n",
+    "fig, axs = plt.subplots(nrows=2, ncols=2, figsize=(20,5))\n",
     "fig.set_size_inches(20, 10)\n",
     "fig.subplots_adjust(wspace=0.2)\n",
     "fig.subplots_adjust(hspace=0.5)\n",
@@ -963,7 +1118,11 @@
   {
    "cell_type": "markdown",
    "id": "annoying-causing",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "###### Question 2 & 3: What is the probability that a randomly selected registered Female / Male will be enrolled in the program?"
    ]
@@ -1030,7 +1189,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "gross-point",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1061,7 +1224,11 @@
   {
    "cell_type": "markdown",
    "id": "successful-amateur",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "###### Question 4: What is the probability that a registered applicant will eventually enroll in the program?"
    ]
@@ -1070,7 +1237,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "communist-shade",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1156,6 +1327,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -1171,7 +1343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
